--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -50,7 +50,7 @@
 
 
     <style name="viewBorderStyle">
-        <item name="android:layout_height">@dimen/_2sdp</item>
+        <item name="android:layout_height">@dimen/_1sdp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:background">@color/borderColor</item>
     </style>
@@ -81,11 +81,11 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/_40sdp</item>
         <item name="android:textAlignment">center</item>
-        <item name="textAllCaps">false</item>
+        <item name="textAllCaps">true</item>
         <item name="backgroundTint">@color/textBlue</item>
         <item name="cornerRadius">@dimen/_10sdp</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:textSize">@dimen/_14ssp</item>
+        <item name="android:textSize">@dimen/_12ssp</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
@@ -108,6 +108,11 @@
        <item name="android:background">@color/white</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_width">match_parent</item>
+    </style>
+
+
+    <style name="CustomProgressDialog" parent="Theme.AppCompat.Dialog">
+        <item name="colorAccent">@color/textBlue</item>
     </style>
 
 
