--- a/app/src/main/res/layout/item_dashboard.xml
+++ b/app/src/main/res/layout/item_dashboard.xml
@@ -40,6 +40,7 @@
     <View
         android:id="@+id/viewBorder"
         style="@style/viewBorderStyle"
+        android:background="@color/textBlue"
         android:layout_marginTop="@dimen/_15sdp"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="@dimen/_10sdp"
