--- a/app/src/main/res/layout/item_lead_list.xml
+++ b/app/src/main/res/layout/item_lead_list.xml
@@ -9,6 +9,7 @@
     <TextView
         android:id="@+id/txtLeadName"
         tools:text="Pratik D"
+        android:textColor="@color/textBlue"
         android:maxLines="1"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="@dimen/_20sdp"
@@ -19,6 +20,7 @@
     <TextView
         android:id="@+id/txtMobileNumber"
         tools:text="123456789"
+        android:textColor="@color/textBlue"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toStartOf="@id/ivLeadList"
