activity_leads added border line below Lead Name, Mobile No.,Attempt No. , Note image made visibility gone , NewLeadDetailsActivity added validation of Mobile no. cannot begin with zero , item lead list made bottom line textBlue

--- a/app/src/main/res/layout/activity_leads.xml
+++ b/app/src/main/res/layout/activity_leads.xml
@@ -82,6 +82,15 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <View
+                    android:id="@+id/viewBorder"
+                    style="@style/viewBorderStyle"
+                    android:background="@color/textBlue"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/labelAttemptNumber" />
+
                 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                     android:id="@+id/leadSwipeRefresh"
                     android:layout_width="match_parent"
