--- a/app/src/main/res/layout/activity_main_updated2.xml
+++ b/app/src/main/res/layout/activity_main_updated2.xml
@@ -383,6 +383,7 @@
                     android:layout_marginTop="@dimen/_10sdp"
                     android:layout_marginEnd="@dimen/_30sdp"
                     android:src="@drawable/notepad_icon"
+                    android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="@id/clTotalCallScheduledForMonth"
                     app:layout_constraintTop_toBottomOf="@id/clTotalCallScheduledForMonth"
                     app:tint="@color/dark_grey" />
