--- a/app/src/main/res/layout/activity_new_lead_details.xml
+++ b/app/src/main/res/layout/activity_new_lead_details.xml
@@ -101,12 +101,13 @@
                     android:id="@+id/spinnerLeadSource"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_20sdp"
-                    android:layout_marginEnd="@dimen/_20sdp"
+                    android:layout_marginStart="@dimen/_30sdp"
+                    android:layout_marginEnd="@dimen/_30sdp"
                     app:layout_constraintStart_toStartOf="@id/inputLayoutMobileNumber"
                     app:layout_constraintEnd_toEndOf="@id/inputLayoutMobileNumber"
                     android:layout_marginTop="@dimen/_20sdp"
                     android:spinnerMode="dropdown"
+                    android:visibility="visible"
                     app:layout_constraintTop_toBottomOf="@id/inputLayoutMobileNumber" />
 
 
