--- a/app/src/main/res/layout/item_lead_list.xml
+++ b/app/src/main/res/layout/item_lead_list.xml
@@ -42,6 +42,7 @@
     <View
         android:id="@+id/viewBorder"
         style="@style/viewBorderStyle"
+        android:background="@color/textBlue"
         android:layout_marginTop="@dimen/_15sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
