--- a/app/src/main/res/layout/activity_call_scheduled.xml
+++ b/app/src/main/res/layout/activity_call_scheduled.xml
@@ -3,6 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
+    <data>
+
+        <variable
+            name="callScheduledViewModel"
+            type="com.example.test.call_scheduled.CallScheduledViewModel" />
+
+    </data>
+
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
