--- a/app/src/main/res/layout/activity_call_status.xml
+++ b/app/src/main/res/layout/activity_call_status.xml
@@ -89,14 +89,14 @@
 
                 <ImageView
                     android:id="@+id/ivWifiCall"
-                    android:src="@drawable/wifi_call"
+                    android:src="@drawable/phonecall"
                     android:layout_marginTop="@dimen/_80sdp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/labelMobileNumber"
                     android:layout_width="@dimen/_100sdp"
                     android:layout_height="@dimen/_100sdp"
-                    app:tint="@color/textBlue" />
+                    />
 
 
                 <Button
