Max length of Lead firstName in item lead list set to 15, in Call Status Activity if call count >2 then made it to zero ,  in Lead List adapter and Room Lead List adapter also if call count >2 then made it to zero

--- a/app/src/main/res/layout/item_lead_list.xml
+++ b/app/src/main/res/layout/item_lead_list.xml
@@ -14,6 +14,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="@dimen/_20sdp"
         android:layout_marginStart="@dimen/_2sdp"
+        android:maxLength="15"
         app:layout_constraintStart_toStartOf="parent"
        style="@style/common_text_style"/>
 
