--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -96,10 +96,10 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/_50sdp</item>
         <item name="android:textAlignment">center</item>
-        <item name="textAllCaps">false</item>
+        <item name="textAllCaps">true</item>
+        <item name="android:textStyle">bold</item>
         <item name="cornerRadius">@dimen/_10sdp</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:textSize">@dimen/_14ssp</item>
+        <item name="android:textSize">@dimen/_12ssp</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
