Test Model Class added for Call Scheduled Activity and set up with recyclerview

--- a/app/src/main/res/layout/activity_call_scheduled.xml
+++ b/app/src/main/res/layout/activity_call_scheduled.xml
@@ -104,6 +104,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_width="match_parent"
                 tools:itemCount="4"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:orientation="vertical"
                 tools:listitem="@layout/item_call_scheduled"
                 android:layout_height="wrap_content"/>
