--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="textBlue">#3388ff</color>
     <color name="textRed">#E60000</color>
     <color name="textGreen">#2A872E</color>
+    <color name="textYellow">#FFEB3B</color>
 
 
 
