--- a/app/src/main/res/layout/custom_dialog_box.xml
+++ b/app/src/main/res/layout/custom_dialog_box.xml
@@ -26,6 +26,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:textSize="@dimen/_14ssp"
+            style="@style/common_text_style"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
